Limature per verifiche conclusive della issue #10